css/weather.css
/*
 * weather.css
 * Magic Mirror
 * (c) 2016 by Lukas Vogel
 */

.weather {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}

.weather .temp {
    position: absolute;
    bottom: 20px;
    left: 20px;

    text-align: right;
    width: 200px;
}

.weather .number {
    font-size: 10vh;
    line-height: 10vh;
    font-family: 'Open Sans';
}

.weather .unit {
    position: relative;
    top: -40px;
    font-size: 4vh;
}

.weather .location {
    font-size: 3vh;
    text-align: right;
    text-overflow: ellipsis;

    position: absolute;
    bottom: 120px;
    left: 20px;
    width: 200px;
}

.weather .cond {
    position: absolute;
    left: 250px;
    bottom: 20px;
    width: 200px;

    font-size: 2.5vw;
    font-style: italic;
}

